--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -53,16 +53,16 @@
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.514"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="100dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="284dp"
-        android:layout_marginEnd="221dp"
-        android:layout_marginBottom="398dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="288dp"
+        android:layout_marginEnd="229dp"
+        android:layout_marginBottom="404dp"
         android:textSize="32sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -236,7 +236,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <ImageView
         android:id="@+id/stol"
@@ -255,7 +255,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/albionic"
         android:text="1.Пока все просто"
         android:textColor="#FFFFFF"
@@ -282,29 +282,28 @@
 
     <ImageView
         android:id="@+id/pausebutton"
-        android:layout_width="89dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="342dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="659dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.681"
-        app:srcCompat="@drawable/pause" />
+        android:layout_width="87dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="296dp"
+        android:layout_marginEnd="28dp"
+        app:layout_constraintBottom_toBottomOf="@+id/lvl_name"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/lvl_name"
+        app:srcCompat="@drawable/pause"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/resumebutton"
-        android:layout_width="65dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="61dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="310dp"
+        android:layout_marginEnd="40dp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/lvl_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/lvl_name"
         app:srcCompat="@drawable/_0734"
         tools:visibility="visible" />
 
@@ -312,15 +311,15 @@
         android:id="@+id/menubutton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginEnd="287dp"
-        android:layout_marginBottom="577dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="285dp"
+        android:layout_marginBottom="517dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/stol"
+        app:layout_constraintEnd_toEndOf="@+id/stol"
+        app:layout_constraintStart_toStartOf="@+id/stol"
+        app:layout_constraintTop_toTopOf="@+id/stol"
         app:srcCompat="@drawable/menupin"
         tools:visibility="visible" />
 
@@ -328,28 +327,33 @@
         android:id="@+id/soundbutton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginBottom="577dp"
+        android:layout_marginStart="165dp"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="166dp"
+        android:layout_marginBottom="517dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/stol"
+        app:layout_constraintEnd_toEndOf="@+id/stol"
+        app:layout_constraintStart_toStartOf="@+id/stol"
+        app:layout_constraintTop_toTopOf="@+id/stol"
         app:srcCompat="@drawable/soundpin"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <ImageView
         android:id="@+id/soundoffbutton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginBottom="577dp"
+        android:layout_marginStart="165dp"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="166dp"
+        android:layout_marginBottom="517dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/soundoffpin" />
+        app:layout_constraintBottom_toBottomOf="@+id/stol"
+        app:layout_constraintEnd_toEndOf="@+id/stol"
+        app:layout_constraintStart_toStartOf="@+id/stol"
+        app:layout_constraintTop_toTopOf="@+id/stol"
+        app:srcCompat="@drawable/soundoffpin"
+        tools:visibility="visible" />
 
     <RadioGroup
         android:id="@+id/delete"
@@ -368,15 +372,15 @@
         android:id="@+id/helpbutton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="283dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="577dp"
+        android:layout_marginStart="271dp"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="517dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/stol"
+        app:layout_constraintEnd_toEndOf="@+id/stol"
+        app:layout_constraintStart_toStartOf="@+id/stol"
+        app:layout_constraintTop_toTopOf="@+id/stol"
         app:srcCompat="@drawable/pngegg"
         tools:visibility="visible" />
 
